--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "dom": "^0.0.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -23,6 +26,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
