--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "router": "^2.2.0"
+    "router": "^2.2.0",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
