--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "dom": "^0.0.3",
+    "phosphor-react": "^1.4.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
