--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.11.0",
     "router": "^2.2.0",
     "use-local-storage": "^3.0.0"
